--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,3 +1,7 @@
-.app {
-  display: flex;
+.App {
+  box-sizing: border-box;
+  max-width: 1280px;
+  width: 100%;
+  margin: 0 auto;
+  height: 100px;
 }
