--- a/src/style/header.css
+++ b/src/style/header.css
@@ -1,4 +1,42 @@
-.header {
-  background-color: rgb(221, 220, 220);
+header {
+  background-color: #003585;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  padding: 20px;
+}
+header ul {
+  list-style-type: none;
+  display: flex;
+  gap: 20px;
+  margin: auto;
+}
+header a {
+  text-decoration: none;
+  color: white;
+}
+header input {
+  width: 203px;
+  height: 48px;
+  border-radius: 20px 0px 0px 20px;
+  border: none;
+  padding-left: 20px;
+}
+header button {
+  width: 132px;
   height: 50px;
+  border-radius: 0px 20px 20px 0px;
+  border: 1px solid white;
+  background-color: #003585;
+  border: none;
+  color: white;
+}
+.signin a:hover {
+  text-decoration: underline;
+  font-size: 18px;
+}
+.search {
+  border: 1px solid white;
+  height: 48px;
 }
