--- a/src/style/substyle/product.css
+++ b/src/style/substyle/product.css
@@ -1,25 +1,27 @@
-/* .card {
-  color: black;
-  width: 250px;
-  border: 1px solid rgba(116, 116, 116, 0.555);
-  padding: 10px;
-  border-radius: 20px;
+.product-detail {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  max-width: 60%;
+  margin: 0 auto;
+  padding-top: 70px;
 }
-.card a {
+.product-name {
   color: #003585;
-  text-decoration: none;
+  font-size: 30px;
 }
-.cardconatiner {
-  color: black;
+.single-cover-img {
+  border: 1px solid rgba(116, 116, 116, 0.555);
+  padding: 20px;
 }
-#singleimage {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+.product-price {
+  font-size: 25px;
 }
-.card button {
+.product-detail button {
   background-color: #003585;
   color: white;
   border-radius: 20px;
+  border: #003585 solid 2px;
   padding: 10px;
-} */
+}
