--- a/src/style/login.css
+++ b/src/style/login.css
@@ -2,12 +2,14 @@
   display: block;
 }
 .login form {
-  width: 30%;
+  width: 50%;
   margin: auto;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  font-size: 24px;
+  /* justify-content: space-around; */
   margin-top: 100px;
+  height: 80vh;
 }
 .login button {
   background-color: #003585;
